--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,4 +15,4 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Install dependencies
-      run: sudo wget https://github.com/devkitPro/pacman/releases/latest/download/devkitpro-pacman.amd64.deb &&  sudo gdebi -n devkitpro-pacman.amd64.deb && sudo rm devkitpro-pacman.amd64.deb && sudo (dkp-)pacman -S ppc-zlib ppc-libpng ppc-mxml ppc-freetype && cd wiipax && make && cd ../channel && make
+      run: sudo wget https://github.com/devkitPro/pacman/releases/latest/download/devkitpro-pacman.amd64.deb && sudo gdebi -n devkitpro-pacman.amd64.deb && sudo rm devkitpro-pacman.amd64.deb && sudo dkp-pacman -S ppc-zlib ppc-libpng ppc-mxml ppc-freetype && cd wiipax && make && cd ../channel && make
