--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,4 +15,4 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Install dependencies
-      run: sudo apt install gdebi -y && sudo wget https://github.com/devkitPro/pacman/releases/latest/download/devkitpro-pacman.amd64.deb && sudo gdebi -n devkitpro-pacman.amd64.deb && sudo rm devkitpro-pacman.amd64.deb && sudo dkp-pacman -S ppc-zlib ppc-libpng ppc-mxml ppc-freetype && cd wiipax && make && cd ../channel && make
+      run: sudo apt install gdebi -y && sudo wget https://github.com/devkitPro/pacman/releases/latest/download/devkitpro-pacman.amd64.deb && sudo gdebi -n devkitpro-pacman.amd64.deb && sudo rm devkitpro-pacman.amd64.deb && export DEVKITPRO=/opt/devkitpro && export DEVKITPPC=/opt/devkitpro/devkitPPC && DEVKITARM=/opt/devkitpro/devkitARM && export PATH=/opt/devkitpro/tools/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin dkp-pacman -Syyu --noconfirm gamecube-dev wii-dev wiiu-dev && dkp-pacman -S --needed --noconfirm ppc-portlibs gamecube-portlibs wii-portlibs wiiu-portlibs &&  dkp-pacman -S --needed --noconfirm devkitARM && dkp-pacman -Scc sudo dkp-pacman -S ppc-zlib ppc-libpng ppc-mxml ppc-freetype && cd wiipax && make && cd ../channel && make
